Add images folder, move images update image links

--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Meatloaf</h1>
 
-    <img src="meatloaf.webp" alt="Meatloaf on a plate" />
+    <img src="./images/meatloaf.webp" alt="Meatloaf on a plate" />
     <h2>Description</h2>
     <p>This meatloaf recipe doesn't take long to make at all, and it's very good!</p>
     <p>Get back to basics with this easy meatloaf recipe. It's quick, traditional, delicious, and it's sure to please everyone at your table.</p>
