--- a/recipes/apple-crisp.html
+++ b/recipes/apple-crisp.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Apple Crisp</h1>
 
-    <img src="apple-crisp.webp" alt="Meatloaf on a plate" />
+    <img src="./images/apple-crisp.webp" alt="Meatloaf on a plate" />
     <h2>Description</h2>
         <p>This easy apple crisp recipe has a topping made with oats, brown sugar, cinnamon, and butter. It's the best dessert for early fall. Within ten minutes of going in the oven, the scent will fill the air, and neighbors will invite themselves in and wonder aloud if there is any left.</p>
 
