--- a/recipes/cornbread.html
+++ b/recipes/cornbread.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Apple Crisp</h1>
 
-    <img src="cornbread.webp" alt="Cornbread with honey drizzle on a plate" />
+    <img src="./images/cornbread.webp" alt="Cornbread with honey drizzle on a plate" />
     <h2>Description</h2>
         <p>Cornbread is a real treat with chili, ribs, or barbecued chicken. You could even use this sweet, homemade cornbread to make stuffing for your Thanksgiving feast! This easy recipe is made from scratch with no mix. My mom made this for me as a child, and now it's my family's favorite. Serve with butter, jam, honey, or your favorite spread.
         </p>
