Update title on Cornbread.html

--- a/recipes/cornbread.html
+++ b/recipes/cornbread.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Apple Crisp</h1>
+    <h1>Cornbread</h1>
 
     <img src="./images/cornbread.webp" alt="Cornbread with honey drizzle on a plate" />
     <h2>Description</h2>
